--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-
-JWT_SECRET = 'super_secretADMIN'
-REF_SECRET  = 'MORETHANHIGH_THE_NPC'
+JWT_SECRET = supersecret
+JWT_SECRET_REFRESH = gal-the-npc 
